mdapioutput/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Car Brand</description>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>BWM</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz</fullName>
                </value>
                <value>
                    <fullName>Porsche</fullName>
                </value>
                <value>
                    <fullName>Volkswagen</fullName>
                </value>
                <value>
                    <fullName>Jaguar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmissionLevel__c</fullName>
        <description>Emission Level Value</description>
        <label>Emission Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FuelType__c</fullName>
        <description>Type Of The Fuel</description>
        <label>Fuel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diesel</fullName>
                    <default>true</default>
                    <label>Diesel</label>
                </value>
                <value>
                    <fullName>Petrol</fullName>
                </value>
                <value>
                    <fullName>Hydrogen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>AMG GT</fullName>
                </value>
                <value>
                    <fullName>Atlas</fullName>
                </value>
                <value>
                    <fullName>Cayenne</fullName>
                </value>
                <value>
                    <fullName>Macan</fullName>
                </value>
                <value>
                    <fullName>Porsche</fullName>
                </value>
                <value>
                    <fullName>Sprinter</fullName>
                </value>
                <value>
                    <fullName>Panamera</fullName>
                </value>
                <value>
                    <fullName>Cayman</fullName>
                </value>
                <value>
                    <fullName>CLA 250</fullName>
                </value>
                <value>
                    <fullName>E 300</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductGlobalExternalId__c</fullName>
        <description>Unique idetifier from external systems</description>
        <externalId>true</externalId>
        <label>Product Global External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProductionDate__c</fullName>
        <description>Production Data Of The Vehicle</description>
        <label>Production Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <description>Transmission</description>
        <label>Transmission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Synchromesh</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>6-Speed Manual</fullName>
                </value>
                <value>
                    <fullName>7-Speed Porsche Doppelkupplung (PDK)</fullName>
                </value>
                <value>
                    <fullName>Constant Mesh</fullName>
                    <isActive>false</isActive>
                    <label>Constant Mesh</label>
                </value>
                <value>
                    <fullName>Differential</fullName>
                    <isActive>false</isActive>
                    <label>Differential</label>
                </value>
                <value>
                    <fullName>Epicyclic</fullName>
                    <isActive>false</isActive>
                    <label>Epicyclic</label>
                </value>
                <value>
                    <fullName>Sliding Mesh</fullName>
                    <isActive>false</isActive>
                    <label>Sliding Mesh</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
</CustomObject>